--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -35,7 +35,7 @@
         {% stylesheets
             '@AppBundle/Resources/public/css/main.css'
             '@AppBundle/Resources/public/css/postsList.css'
-            '@AppBundle/Resources/public/css/ui-lightness/jquery-ui-1.10.4.custom.min.css'
+            '@AppBundle/Resources/public/css/ui-lightness/jquery.css'
         %}
             <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
@@ -69,13 +69,13 @@
 	{# Piwik statistics # }
 	<script type="text/javascript">
 		var _paq = _paq || [];
-		_paq.push(["setCookieDomain", "*.getpeers.com"]);
+		_paq.push(["setCookieDomain", "*.freepo.st"]);
 		_paq.push(["trackPageView"]);
 		_paq.push(["enableLinkTracking"]);
-		_paq.push(["setTrackerUrl", "http://a.getpeers.com/t.php"]);
+		_paq.push(["setTrackerUrl", "http://a.freepo.st/t.php"]);
 		_paq.push(["setSiteId", "1"]);
 	</script>
-	<script type="text/javascript" defer="defer" async="async" src="http://a.getpeers.com/t.js"></script>
+	<script type="text/javascript" defer="defer" async="async" src="http://a.freepo.st/t.js"></script>
     #}
     
 </body>
