--- a/src/AppBundle/Resources/views/Default/User/menu.html.twig
+++ b/src/AppBundle/Resources/views/Default/User/menu.html.twig
@@ -35,19 +35,16 @@
     </div>
     
     <div class="menu">
-        <a class="none" target="_self" href="{{ path('freepost_user', {'userName': user.username}) }}">
+        <a class="none communities {{ page == 'COMMUNITIES' ? 'selected' }}" target="_self" href="{{ path('freepost_user', {'userName': user.username}) }}">
             Communities
         </a>
-        <a class="none" target="_self" href="{{ path('freepost_user_myposts', {'userName': user.username}) }}">
-            My posts
+        <a class="none my {{ (page == 'MYPOSTS' or page == 'MYCOMMENTS' or page == 'REPLIES') ? 'selected' }}" target="_self" href="{{ path('freepost_user_replies', {'userName': user.username}) }}">
+            My posts / comments
         </a>
-        <a class="none" target="_self" href="{{ path('freepost_user_replies', {'userName': user.username}) }}">
-            Comments
-        </a>
-        <a class="none" target="_self" href="{{ path('freepost_user_preferences', {'userName': user.username}) }}">
+        <a class="none preferences {{ page == 'PREFERENCES' ? 'selected' }}" target="_self" href="{{ path('freepost_user_preferences', {'userName': user.username}) }}">
             Preferences
         </a>
-        <a class="none" target="_self" href="{{ path('freepost_user_signout') }}">
+        <a class="none signout {{ page == 'SIGNOUT' ? 'selected' }}" target="_self" href="{{ path('freepost_user_signout') }}">
             Sign out
         </a>
     </div>
