--- a/src/AppBundle/Resources/views/Default/User/searchCommunities.html.twig
+++ b/src/AppBundle/Resources/views/Default/User/searchCommunities.html.twig
@@ -19,7 +19,19 @@
  #}
 
 <div class="searchCommunities">
-
+    
+    <div class="title">
+        Create a new community
+    </div>
+    
+    <form class="new" action="{{ url('freepost_community_create') }}" method="post" target="_self" enctype="application/x-www-form-urlencoded">
+        <input type="text" name="communityName" value="" />
+    </form>
+    
+    <div class="title">
+        Browse communities
+    </div>
+    
     {% for aCommunity in communities %}
         <a class="none community" target="_self" href="{{ path('freepost_community', {'communityName': aCommunity.name}) }}">
             <img alt="" title="" src="{{ url('freepost_community_picture', {'communityHashId': aCommunity.hashId}) }}" />
