--- a/src/AppBundle/Resources/views/Default/User/Page/preferences.html.twig
+++ b/src/AppBundle/Resources/views/Default/User/Page/preferences.html.twig
@@ -58,6 +58,9 @@
                       method  = "post"
                       target  = "iframenull">
                     <input type="file" id="pictureFile" name="pictureFile" />
+                    
+                    {# "Delete picture" button #}
+                    <input type="button" class="buttonActionBackground" name="deletePictureFile" id="deletePictureFile" value="Remove picture" />
                 </form>
                 
                 {% image '@AppBundle/Resources/public/images/loading-bar.gif' %}
