--- a/web/bundles/app/css/home.css
+++ b/web/bundles/app/css/home.css
@@ -1,7 +1,7 @@
 /* freepost
  * http://freepo.st
  *
- * Copyright © 2014-2015 zPlus
+ * Copyright Â© 2014-2015 zPlus
  * 
  * This file is part of freepost.
  * freepost is free software: you can redistribute it and/or modify
@@ -19,7 +19,7 @@
  */
 
 div.home {
-    background-color: #f5f5f5;
+    background-color: #f5f8fa;
     min-height: 100%;
 }
 
