--- a/web/bundles/app/css/main.css
+++ b/web/bundles/app/css/main.css
@@ -1,7 +1,7 @@
 /* freepost
  * http://freepo.st
  *
- * Copyright © 2014-2015 zPlus
+ * Copyright Â© 2014-2015 zPlus
  * 
  * This file is part of freepost.
  * freepost is free software: you can redistribute it and/or modify
@@ -211,7 +211,11 @@ ul {
 	top:1px;
 }
 
-
+body > .footer {
+    background-color: #f5f8fa;
+    padding: 4em 0;
+    text-align: center;
+}
 
 
 
