--- a/web/bundles/app/css/postsList.css
+++ b/web/bundles/app/css/postsList.css
@@ -1,7 +1,7 @@
 /* freepost
  * http://freepo.st
  *
- * Copyright © 2014-2015 zPlus
+ * Copyright Â© 2014-2015 zPlus
  * 
  * This file is part of freepost.
  * freepost is free software: you can redistribute it and/or modify
